--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.31.0",
     "@hono/clerk-auth": "^3.0.3",
     "@hono/zod-validator": "^0.7.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,6 +21,7 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
   },
